Moved States.txt to data folder

--- a/src/D66.US2024/D66.US2024.csproj
+++ b/src/D66.US2024/D66.US2024.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="States.txt" />
+    <EmbeddedResource Include="Data\States.txt" />
   </ItemGroup>
 
   <ItemGroup>
